simpljob/basic-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-auth
spec:
  type: NodePort
  selector: 
    app: basic-auth
  ports:
  - protocol: TCP
    port: 80
    tagetPort: http
    nodeport: 30060

---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: basic-auth
  labels:
    app: basic-auth
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: basic-auth
  template:
    metadata:
      labels:
        app: basic-auth
    spec:
      containers:
      - name: nginx
        image: "gihyodocker/nginx:latest"
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 80
        volumeMounts:
          - mountPath: /etc/nginx/secret
            name: nginx-secret
            readOnly: true
      - name: echo
        image: "gihyodocker/echo:latest"
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
      volumes:
      - name: nginx-secret
        secret:
          secretName: nginx-secret
